# rl-exec-data

./: .env.example  .gitignore  README.md  debug_capture.py  debug_capture_detailed.py  poetry.toml  pyproject.toml  test_capture_fixed.py  validation_test_report_20250721_210638.json  validation_test_simple_20250721_210802.json
.ai/: debug-log.md
.bmad-core/: install-manifest.yaml
config/: multi_symbol_example.yaml
deep-research/agile-fidelity-refinement-research/: agile-fidelity-refinement-prompt.md  claude-agile-fidelity-refinement-research.md  (+2 more)
docs/: DATA_ACQUISITION_SUMMARY.md  GAP_RESOLUTION_REPORT.md  PROJECT_STATUS_SUMMARY.md  SETUP.md  STORY_1.1_RESULTS_SUMMARY.md  STORY_1.2.1_RESULTS_SUMMARY.md
docs/prd/: epics.md  (+13 more)
notebooks/: decimal_pipeline_test.ipynb
prompts/: core-project-idea.md
scripts/: acquire_data.py  acquire_data_lakeapi.py  analyze_io_requirements.py  analyze_origin_time.py  analyze_origin_time_real_data.py  analyze_origin_time_simple.py  analyze_real_origin_time_fixed.py  bench_replay.py  capture_live_data.py  check_capture_status.sh  count_total_messages.py  create_capture_metadata.py  create_high_volume_metadata.py  inspect_real_data.py  monitor_capture.sh  pre_capture_validation.sh  pre_capture_validation_macos.sh  run_delta_spike.py  run_golden_delta_validation.py  run_multi_symbol_pipeline.py  start_high_volume_capture.sh  start_low_volume_capture.sh  start_special_event_capture.sh  test_crypto_lake_connection.py  test_decimal_pipeline.py  test_validation_framework.py  test_validation_framework_simple.py  validate_5min_capture.py  validate_capture.py  validate_capture_session.py
tests/: test_capture_setup.py
(+218 files in other folders)
