[tool.poetry]
name = "rlx-datapipe"
version = "0.1.0"
description = "RLX Co-Pilot Data Pipeline"
authors = ["RLX Team <team@rlx.ai>"]
readme = "README.md"
packages = [{include = "rlx_datapipe", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.20.0"
loguru = "^0.7.0"
lakeapi = "^0.22.0"
boto3 = "^1.34.0"
python-dotenv = "^1.0.0"
pandas = "^2.0.0"
click = "^8.1.0"
tqdm = "^4.66.0"
websockets = "^12.0"
aiohttp = "^3.9.0"
scipy = "^1.13.0"
numpy = "^1.26.0"
psutil = "^5.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
black = "^24.0.0"
ruff = "^0.3.0"
pyyaml = "^6.0.2"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
plotly = "^6.2.0"
opentelemetry-api = "^1.35.0"
pyarrow = "^21.0.0"
cryptography = "^45.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PGH", "PL", "TRY", "RUF"]
ignore = ["S101", "S104", "S106", "S108", "S311", "S324", "S603", "S607", "COM812", "ISC001", "TRY003", "EM101", "EM102", "BLE001", "PLR2004", "SLF001", "DTZ001", "DTZ005", "PLR0913", "FBT001", "FBT002", "TRY300", "S110", "SIM105", "F841", "T201", "PLR0915", "ARG001"]